Fix name input vertical align

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,7 +124,7 @@ body.white{
     font-size: 18px;
     border-bottom:5px solid #fff;
     width: 110px;
-    vertical-align: 8%;
+    vertical-align: 22%;
 }
 
 
